applications/so-crates/so-crates-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: so-crates
  namespace: so-crates
spec:
  host: so-crates.apps.ocp.igou.systems
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: so-crates-auth
    weight: 100
  wildcardPolicy: None
