applications/so-crates/default-deny-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: so-crates
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
